[gd_scene load_steps=8 format=3 uid="uid://6gvj426uo7dc"]

[ext_resource type="Script" path="res://Scripts/Items/arrow.gd" id="1_50fa1"]
[ext_resource type="Texture2D" uid="uid://c0ftagr5i3nj" path="res://kenney_voxel-pack/Spritesheets/spritesheet_items.png" id="2_5cqjg"]
[ext_resource type="Script" path="res://Scripts/Components/hitbox_component.gd" id="3_xna7g"]

[sub_resource type="AtlasTexture" id="AtlasTexture_2q4dp"]
atlas = ExtResource("2_5cqjg")
region = Rect2(768, 768, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_6dbag"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2q4dp")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_obcww"]
radius = 1.0
height = 5.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_3kysl"]
radius = 3.0
height = 20.0

[node name="Arrow" type="Node2D"]
z_index = 8
script = ExtResource("1_50fa1")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
rotation = 0.798226
scale = Vector2(0.08, 0.08)
sprite_frames = SubResource("SpriteFrames_6dbag")

[node name="HitboxComponentArrow" type="Area2D" parent="."]
process_mode = 4
collision_layer = 64
collision_mask = 23
script = ExtResource("3_xna7g")
damage = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponentArrow"]
position = Vector2(3.2, -0.1)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_obcww")

[node name="StopTimer" type="Timer" parent="."]
wait_time = 0.01
one_shot = true

[node name="StartTimer" type="Timer" parent="."]
wait_time = 0.01
one_shot = true

[node name="DangerArea" type="Area2D" parent="."]
collision_layer = 128
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="DangerArea"]
position = Vector2(16, 0)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_3kysl")

[connection signal="area_entered" from="HitboxComponentArrow" to="." method="_on_hitbox_component_arrow_area_entered"]
[connection signal="body_entered" from="HitboxComponentArrow" to="." method="_on_hitbox_component_arrow_body_entered"]
[connection signal="hit" from="HitboxComponentArrow" to="." method="_on_hurtbox_hit"]
[connection signal="timeout" from="StopTimer" to="." method="_on_stop_timer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
